--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ghost Scripts Collection</title>
+    <title>Script</title>
+    <meta name="theme-color" content="#000001">
+    <link rel="icon" href="https://qu.ax/wOPfl.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://qu.ax/wOPfl.png" type="image/x-icon"> 
+    <meta content="Scripts" property="og:title" />
+    <meta content="http://kys.lol/" property="og:url" />
+    <meta content="https://i.imgur.com/y6XhCX6.jpeg" property="og:image" />
+    <meta content="#000001" data-react-helmet="true" name="theme-color" />
     <style>
         body {
             background-color: #1e1e1e;
