--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <h1>Ghost Scripts</h1>
+    <h1>Shity Scripts</h1>
     <input type="text" id="searchInput" placeholder="Search Script" onkeyup="searchCode()">
     <div id="codeContainer"></div>
 
