--- a/index.html
+++ b/index.html
@@ -11,53 +11,7 @@
     <meta content="http://kys.lol/" property="og:url" />
     <meta content="https://i.imgur.com/y6XhCX6.jpeg" property="og:image" />
     <meta content="#000001" data-react-helmet="true" name="theme-color" />
-    <style>
-        body {
-            background-color: #1e1e1e;
-            color: #d4d4d4;
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1, h2 {
-            color: #ffffff;
-        }
-        input[type="text"] {
-            width: 94%;
-            padding: 8px;
-            margin-bottom: 20px;
-            border: 1px solid #333;
-            border-radius: 5px;
-            background-color: #252526;
-            color: #d4d4d4;
-        }
-        pre {
-            background-color: #252526;
-            padding: 10px;
-            border: 1px solid #333;
-            border-radius: 5px;
-            overflow-x: auto;
-            margin-bottom: 10px;
-        }
-        code {
-            font-family: "Courier New", monospace;
-            color: #569cd6;
-        }
-        .hidden {
-            display: none;
-        }
-        .copy-button {
-            padding: 5px 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007acc;
-            color: #ffffff;
-            cursor: pointer;
-            margin-bottom: 30px;
-        }
-        .copy-button:hover {
-            background-color: #005a99;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Shity Scripts</h1>
